<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    >

    <TextView
        android:id="@+id/tvnotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/runningtext"
        android:textColor="#fff"
        android:textSize="18sp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textStyle="bold" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:orientation="vertical" android:background="@drawable/boxshape"
    android:padding="10dp" android:layout_gravity="center_horizontal"
    android:layout_marginTop="100dp"
    android:layout_marginRight="20dp" android:layout_marginLeft="20dp" android:layout_marginBottom="20dp">
    <Button
        android:id="@+id/btnpdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/capsule"
        android:text="@string/downloadpdf"
        android:textSize="20sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btnview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/capsule"
        android:text="@string/view"
        android:textSize="20sp"
        android:textStyle="normal" />
</LinearLayout>

</LinearLayout>